fix: let heading color reach under nav

--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -6,7 +6,7 @@ import WhiteboardContext from "./WhiteboardContext.astro";
 
 <WhiteboardContext>
   <div
-    class="relative before:absolute before:inset-0 sm:before:bottom-[30%] before:bottom-[50%] before:bg-gray-900 before:-z-10"
+    class="pt-12 relative before:absolute before:inset-0 sm:before:bottom-[30%] before:bottom-[50%] before:bg-gray-900 before:-z-10"
   >
     <div
       data-grid
