--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ import IBen from "../components/iBen/Frame.astro";
 ---
 
 <BaseLayout>
-  <main class="overflow-hidden">
+  <!-- Negative margin to let heading color tuck under the nav -->
+  <main class="overflow-hidden -mt-12">
     <Heading />
     <IBen />
   </main>
