feat: wavy heading border

--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -5,9 +5,25 @@ import WhiteboardContext from "./WhiteboardContext.astro";
 ---
 
 <WhiteboardContext>
-  <div
-    class="pt-12 relative before:absolute before:inset-0 sm:before:bottom-[30%] before:bottom-[50%] before:bg-gray-900 before:-z-10"
-  >
+  <div class="pt-16 mb-32 relative">
+    <div
+      class="inset-0 absolute sm:bottom-[30%] bottom-[50%] bg-gray-900 -z-10"
+    >
+      <svg
+        class="absolute -bottom-8 left-0 right-0 w-full h-8 text-gray-900 -z-10"
+        width="1229"
+        height="38"
+        viewBox="0 0 1229 38"
+        fill="none"
+        preserveAspectRatio="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1230 0H0V33.6109C20.6569 36.0522 44.4097 36.0018 66.5979 35.9546C69.6164 35.9482 72.6068 35.9419 75.5558 35.9419C105.988 35.9419 164.838 30.8506 191.215 25.2975C197.321 23.9655 201.852 22.8609 205.589 21.9496L205.593 21.9488L205.594 21.9485C218.102 18.899 221.73 18.0145 245.811 18.0145C267.483 18.0145 275.245 20.2183 286.697 23.4699C291.951 24.9617 297.982 26.674 306.489 28.4951C332.355 34.0482 349.815 37.4421 412.685 37.5703C443.114 37.5691 485.54 36.3716 511.566 30.8213C538.28 25.0306 561.101 20.3403 592.38 20.3403C623.825 20.3403 661.528 25.6702 688.072 31.4608C714.275 37.0139 752.826 37.9482 783.427 37.9482C813.689 37.9482 835.496 36.0546 861.534 30.5015C888.249 24.7109 916.482 21.2999 948.099 21.2999C979.376 21.2999 1002.03 25.6702 1028.91 31.4608C1053.5 36.7076 1082.78 36.6893 1111.47 36.6712H1111.48C1113.15 36.6702 1114.82 36.6692 1116.48 36.6692C1146.91 36.6692 1193.08 35.0953 1218.95 29.5422C1222.66 28.7427 1226.22 27.9519 1229.68 27.1827C1229.79 27.1591 1229.89 27.1356 1230 27.112V0Z"
+          fill="currentColor"></path>
+      </svg>
+    </div>
+
     <div
       data-grid
       class="group mb-8 flex max-w-[80ch] grid gap-8 mx-auto px-4 sm:px-8"
