--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </WhiteboardContext>
     </div>
     <article class="mt-6 md:mt-12 lg:mt-28">
-      <h1 class="text-3xl mb-3 font-heading">About me</h1>
+      <h1 class="text-4xl mb-4 sm:mb-8 font-heading">About me</h1>
       <input id="inbrief-checkbox" class="hidden checkbox" type="checkbox" />
       <label
         class="font-bold cursor-pointer grid gap-2 items-center justify-between text-lg text-gray-400 mb-2"
