fix: iben font and padding

--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -8,8 +8,8 @@ import { Icon } from "astro-icon/components";
 const showcaseSrc = getImgSrc(showcaseVideo);
 ---
 
-<div class="mt-24 text-center max-w-prose mx-auto">
-  <h2 class="text-8xl mb-4 font-heading">
+<div class="mt-24 px-2 sm:px-4 text-center max-w-prose mx-auto">
+  <h2 class="text-5xl sm:text-7xl mb-4 font-heading">
     I make <span class="text-cyan-300 font-bold">videos</span>
   </h2>
   <p class="text-slate-400 text-xl leading-9">
