feat: new and improved about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout title="About Ben">
   <main class="px-4 sm:grid grid-cols-[1fr_2fr] max-w-[88ch] mx-auto gap-16">
-    <div class="sm:block hidden">
+    <div class="sm:block hidden mt-16">
       <WhiteboardContext>
         <Whiteboard />
       </WhiteboardContext>
@@ -26,44 +26,48 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </label>
       <div class="content-personal">
         <p>
-          Hey there! I’m Ben, a software dev from Charleston SC, USA, learning
-          how cold the northeast can be. You can call me a “traditional”
-          software developer by trade given my <a
-            href="https://www.cc.gatech.edu/degree-programs/bachelor-science-computer-science"
-            >BS in CS</a
-          > from Georgia Tech (go Jackets!). Today, I’ve channeled this technical
-          know-how into open source web development as a full-time maintainer at
-          <a href="https://astro.build">Astro</a>.
+          Hey there! I’m Ben, a senior web developer from Charleston SC, USA.
+          You might know me from my <a
+            href="https://www.youtube.com/@bholmesdev/shorts"
+            >short whiteboard videos</a
+          > breaking down all sorts of topics (React Server Components, HTMX, and
+          SQLite to name a few). You also might know me as the inventor of <a
+            href="https://astro.build">Astro.</a
+          > No, <strong>I didn't invent Astro.</strong> But I'm a proud full time
+          developer driving it forward!
         </p>
         <p>
-          My core values are <strong>be caring, be clear, and be casual.</strong
-          >
-          Tech is a scary industry to jump into, especially without a sense of humor
-          to keep your head on straight. So as long as I’m a web developer, my goal
-          is to <a href="#i-teach">teach</a> and <a href="#i-create">build</a>
-          tools that help others become the best version of themselves. Well, assuming
-          we adhere to <a href="https://semver.org/"
-            >semantic versioning principles</a
-          >
-          😉
+          I've been a web programmer since the pre-npm days. This taught me
+          some... Bower-ful lessons on what it takes to build scalable software.
+          It's a lot more than JQuery and a dream.
+        </p>
+        <p>
+          I've since picked up every meta-framework you can think of, and even <a
+            href="https://slinkity.dev">invented my own</a
+          > before joining Astro. As much as I love building web experiences, I've
+          realized I'm into tech for the tech itself. So, I've devoted myself to
+          helping
+          <em>you</em> build better websites. Through tools, through videos, through
+          puns, and a healthy <s>tolerance</s> love for JavaScript.
         </p>
       </div>
       <div class="content-recruiter">
         <p>
           I'm a full-time software developer at <a href="https://astro.build"
             >the Astro Technology Company</a
-          >, so I'm not looking for employment right now.
+          >, so I'm not looking for employment.
         </p>
         <p>
           Still, here's all my skills / buzzwords you were going to search for: <strong
             >NodeJS, ES6, ReactJS, NextJS, semantic HTML, understanding of a11y,
-            Angular 2+, SolidJS, SvelteJS, SCSS, NoSQL, OOP programming, C
-            Basic, unit testing w/ Jest</strong
-          >... Okay I'm getting tired typing.
+            Angular 2+, SolidJS, SvelteJS, SCSS, MySQL, NoSQL, OOP programming,
+            C Basic, unit testing w/ Jest</strong
+          >...
         </p>
         <p>
+          Okay I'm getting tired typing.
           <a href="https://www.linkedin.com/in/bholmesdev/"
-            >Just browse my LinkedIn</a
+            >Just browse my LinkedIn.</a
           >
         </p>
       </div>
