chore: top margin on about link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Icon } from "astro-icon/components";
   <main class="overflow-hidden -mt-12">
     <Heading />
     <IBen />
-    <div class="max-w-prose mx-auto px-2">
+    <div class="max-w-prose mx-auto px-2 mt-4">
       <a
         href="/about"
         data-draw-btn
