feat: make subscribe cyan

--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -15,7 +15,9 @@ const showcaseSrc = getImgSrc(showcaseVideo);
   <p class="text-slate-400 text-xl leading-9">
     About the hardest parts of web dev. <strong
       class="text-slate-50 animate-pulse"
-      ><a href="https://youtube.com/@bholmesdev?sub_confirmation=1">Subscribe</a
+      ><a
+        class="text-cyan-300"
+        href="https://youtube.com/@bholmesdev?sub_confirmation=1">Subscribe</a
       ></strong
     > for practical examples, diagrams, and 60 second explainers.
   </p>
