chore: unify hover styles

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -88,9 +88,10 @@ const {
 
       article a {
         color: var(--color-primary-light);
+        transition: filter 0.15s;
       }
       article a:is(:hover, :focus) {
-        filter: brightness(1.2);
+        filter: brightness(1.25);
       }
     </style>
     <script>
