--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -61,6 +61,16 @@ const {
     <link rel="preload" href={ranga400url} as="font" crossorigin="anonymous" />
     <link rel="preload" href={ranga700url} as="font" crossorigin="anonymous" />
     <ViewTransitions fallback="none" />
+    {
+      import.meta.env.PROD && (
+        <script
+          defer
+          data-domain="bholmes.dev"
+          src="https://plausible.io/js/script.js"
+        />
+      )
+    }
+
     <slot name="head" />
     <title>{title}</title>
   </head>
