--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -38,8 +38,13 @@
   --color-primary: #6200ff;
   --color-primary-light: #a08aff;
 
+  /*
+  Tailwind omits default values for certain variables.
+  This renders correctly in chrome and webkit, but not Firefox.
+  */
   --tw-gradient-from-position: 0;
   --tw-gradient-to-position: 100%;
+  --tw-translate-x: 0;
 }
 
 @supports (transition-timing-function: linear(1, 1)) {
