fix: youtube link hidden on blog mobile

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -36,7 +36,7 @@ function isMatch(urlPath: string, linkPath: string) {
     <h2 class="sr-only">Social links</h2>
     <ul
       transition:name="social"
-      class="text-slate-200 flex gap-4 items-center sm:relative absolute group-[[data-open]]:invisible group-[[data-open]]:opacity-0 sm:group-[[data-open]]:opacity-100 sm:group-[[data-open]]:visible opacity-100 visible transition-all"
+      class="text-slate-200 flex gap-4 items-center sm:relative absolute ml-14 sm:ml-0 group-[[data-open]]:invisible group-[[data-open]]:opacity-0 sm:group-[[data-open]]:opacity-100 sm:group-[[data-open]]:visible opacity-100 visible transition-all"
     >
       <li
         class="hover:text-white hover:scale-110 focus-within:scale-110 transition-all ease-spring-3 duration-700"
