--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -46,7 +46,20 @@ const { Content, headings } = await post.render();
       }
       <div class="flex flex-col gap-4">
         <h1 class="text-4xl mt-12">{post.data.title}</h1>
-        <LikeButton postSlug={post.slug} />
+        <div class="flex flex-wrap gap-6 items-center mb-8">
+          <LikeButton postSlug={post.slug} />
+          <p
+            class="bg-slate-800 rounded px-2 py-1 text-gray-300 font-mono text-sm w-max"
+          >
+            Published {
+              post.data.date.toLocaleDateString(undefined, {
+                year: "numeric",
+                month: "short",
+                day: "numeric",
+              })
+            }
+          </p>
+        </div>
       </div>
       <Content />
       <div class="mt-12">
