fix: pass post social image to meta

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -30,6 +30,7 @@ const { Content, headings } = await post.render();
   {headings}
   title={post.data.title}
   description={post.data.description}
+  image={post.data.image}
 >
   <main class="max-w-prose mx-auto px-3 mb-24">
     <article-scroll>
