feat: small tweaks to about copy

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,8 +33,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           > breaking down all sorts of topics (React Server Components, HTMX, and
           SQLite to name a few). You also might know me as the inventor of <a
             href="https://astro.build">Astro.</a
-          > No, <strong>I didn't invent Astro.</strong> But I'm a proud full time
-          developer driving it forward!
+          >
+          <strong>I didn't invent Astro.</strong> But I'm a proud full time developer
+          driving it forward :)
         </p>
         <p>
           I've been a web programmer since the pre-npm days. This taught me
@@ -48,7 +49,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           realized I'm into tech for the tech itself. So, I've devoted myself to
           helping
           <em>you</em> build better websites. Through tools, through videos, through
-          puns, and a healthy <s>tolerance</s> love for JavaScript.
+          puns, and a healthy <s>love</s> tolerance for JavaScript.
         </p>
       </div>
       <div class="content-recruiter">
