--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -66,7 +66,7 @@ const {
         <script
           defer
           data-domain="bholmes.dev"
-          src="https://plausible.io/js/script.js"
+          src="https://plausible.io/js/script.outbound-links.js"
         />
       )
     }
