--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -1,15 +1,10 @@
 @import 'tailwindcss';
 
 @theme {
+  --font-family-heading: var(--font-family-heading);
+  --font-family-sans: var(--font-family-sans);
+
   /* Default theme: https://github.com/tailwindlabs/tailwindcss/blob/next/packages/tailwindcss/theme.css */
-  --font-family-heading: "Ranga", system-ui, -apple-system, BlinkMacSystemFont,
-  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-  "Helvetica Neue", sans-serif;
-
-  --font-family-sans: "Atkinson Hyperlegible", system-ui, -apple-system,
-  BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-  "Open Sans", "Helvetica Neue", sans-serif;
-
   --transition-timing-function-spring-1: cubic-bezier(0, 1.49, 0.38, 0.86);
   --transition-timing-function-spring-2: cubic-bezier(0.02, 1.63, 0.39, 0.81);
   --transition-timing-function-spring-3: cubic-bezier(0.02, 1.72, 0.43, 0.79);
