feat: switch to the shorts link for "Videos"

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -19,7 +19,11 @@ const links: ListItem[] = [
   { label: "Ben", url: "/" },
   { label: "About", url: "/about" },
   { label: "Blog", url: "/blog" },
-  { label: "Videos", url: "https://wtw.dev", external: true },
+  {
+    label: "Videos",
+    url: "https://youtube.com/@bholmesdev/shorts",
+    external: true,
+  },
 ];
 
 function isMatch(urlPath: string, linkPath: string) {
