--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -32,7 +32,7 @@ function isMatch(urlPath: string, linkPath: string) {
 }
 ---
 
-<nav-open class="group block sticky z-40 top-0">
+<div data-el={el("container")} class="group block sticky z-40 top-0">
   <nav
     class="max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-2 px-3 sm:py-3"
   >
@@ -96,9 +96,8 @@ function isMatch(urlPath: string, linkPath: string) {
     <div>
       <button
         transition:name="nav-toggle"
+        data-el={el("btn")}
         class="h-[20px] w-[25px] flex flex-col justify-between relative bg-transparent before:absolute before:-inset-1 before:-z-10 before:rounded-md"
-        data-action="click:nav-open#toggle"
-        data-target="nav-open.btn"
         aria-controls={id}
         aria-label="Toggle menu"
       >
@@ -117,69 +116,60 @@ function isMatch(urlPath: string, linkPath: string) {
       </button>
     </div>
   </nav>
-</nav-open>
+</div>
 
 <script>
-  import { attr, target, targets, controller } from "@github/catalyst";
-  import { toAttr } from "../utils.client";
+  import { effect, onPageLoad } from "~/lib/effect";
+  import { Signal } from "signal-polyfill";
 
-  @controller
-  class NavOpenElement extends HTMLElement {
-    @attr open = false;
-    @target btn: HTMLButtonElement;
-    @targets links: HTMLAnchorElement[];
+  onPageLoad(() => {
+    const open = new Signal.State(false);
+    let scrollY = 0;
+    let ticking = false;
+    const abort = new AbortController();
 
-    scrollY = 0;
-    ticking = false;
+    el("btn").addEventListener("click", () => {
+      open.set(!open.get());
+    });
 
-    #abort = new AbortController();
+    effect(() => {
+      el("container").toggleAttribute("data-open", open.get());
+      el("btn").toggleAttribute("aria-expanded", open.get());
+    });
 
-    toggle() {
-      this.open = !this.open;
-      this.btn.ariaExpanded = toAttr(this.open);
-    }
+    const scrollListener = () => {
+      scrollY = window.scrollY;
 
-    connectedCallback() {
-      const scrollListener = () => {
-        this.scrollY = window.scrollY;
-
-        if (!this.ticking) {
-          window.requestAnimationFrame(() => {
-            this.open = this.scrollY < 20;
-            this.ticking = false;
-          });
-
-          this.ticking = true;
-        }
-      };
-      const smBreakpointMatch = window.matchMedia("(min-width: 640px)");
-      this.open = smBreakpointMatch.matches;
-
-      if (smBreakpointMatch.matches) {
-        document.addEventListener("scroll", scrollListener, {
-          signal: this.#abort.signal,
+      if (!ticking) {
+        window.requestAnimationFrame(() => {
+          open.set(scrollY < 20);
+          ticking = false;
         });
-      }
-      smBreakpointMatch.addEventListener(
-        "change",
-        (e) => {
-          this.open = e.matches;
-          if (e.matches) {
-            document.addEventListener("scroll", scrollListener, {
-              signal: this.#abort.signal,
-            });
-          } else {
-            document.removeEventListener("scroll", scrollListener);
-          }
-        },
-        { signal: this.#abort.signal }
-      );
-    }
 
-    disconnectedCallback() {
-      this.#abort.abort();
+        ticking = true;
+      }
+    };
+    const smBreakpointMatch = window.matchMedia("(min-width: 640px)");
+    open.set(smBreakpointMatch.matches);
+
+    if (smBreakpointMatch.matches) {
+      document.addEventListener("scroll", scrollListener, abort);
     }
-  }
+    smBreakpointMatch.addEventListener(
+      "change",
+      (e) => {
+        open.set(e.matches);
+        if (e.matches) {
+          document.addEventListener("scroll", scrollListener, abort);
+        } else {
+          document.removeEventListener("scroll", scrollListener);
+        }
+      },
+      abort
+    );
+
+    return () => abort.abort();
+  });
 </script>
 
 <style is:global>
